--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Khatiex Designs</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>Khatiex Designs | Masterful Tailoring & Home Decor</title>
+    <meta name="description" content="Exquisite custom-tailored Ankara gowns, elegant children's wear, and premium artisan bedding crafted with precision." />
+    <meta name="author" content="Khatiex Designs" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Khatiex Designs" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Khatiex Designs | Masterful Tailoring" />
+    <meta property="og:description" content="Custom-tailored fashion and hotel-grade bedding. Experience precision in every stitch." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Khatiex Designs" />
+    <meta name="twitter:description" content="From cerulean sculpted gowns to artisan suites—bespoke tailoring at its finest." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <link rel="icon" type="image/png" href="/og-image.png" />
   </head>
 
   <body>
