--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Khatiex Designs | Masterful Tailoring & Home Decor</title>
-    <meta name="description" content="Exquisite custom-tailored Ankara gowns, elegant children's wear, and premium artisan bedding crafted with precision." />
-    <meta name="author" content="Khatiex Designs" />
+    <meta name="description" content="Exquisite custom-tailored Ankara gowns and premium artisan bedding crafted with precision." />
 
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Khatiex Designs | Masterful Tailoring" />
     <meta property="og:description" content="Custom-tailored fashion and hotel-grade bedding. Experience precision in every stitch." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="https://khatiex-designs.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Khatiex Designs" />
-    <meta name="twitter:description" content="From cerulean sculpted gowns to artisan suites—bespoke tailoring at its finest." />
-    <meta name="twitter:image" content="/og-image.png" />
-
-    <link rel="icon" type="image/png" href="/og-image.png" />
+    <meta name="twitter:image" content="https://khatiex-designs.vercel.app/" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
 
   <body>
