Save current changes

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <meta name="description" content="Exquisite custom-tailored Ankara gowns and premium artisan bedding crafted with precision." />
 
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://khatiex-designs.vercel.app/" />
     <meta property="og:title" content="Khatiex Designs | Masterful Tailoring" />
     <meta property="og:description" content="Custom-tailored fashion and hotel-grade bedding. Experience precision in every stitch." />
-    <meta property="og:image" content="https://khatiex-designs.vercel.app/" />
+    <meta property="og:image" content="https://khatiex-designs.vercel.app/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Khatiex Designs" />
-    <meta name="twitter:image" content="https://khatiex-designs.vercel.app/" />
+    <meta name="twitter:description" content="Bespoke tailoring and artisan suites—precision in every stitch." />
+    <meta name="twitter:image" content="https://khatiex-designs.vercel.app/og-image.png" />
+
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
 
