--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Khatiex Designs | Masterful Tailoring & Home Decor</title>
-    <meta name="description" content="Exquisite custom-tailored Ankara gowns and premium artisan bedding crafted with precision." />
+    <meta name="description" content="Experience the pinnacle of tailoring with Khatiex Designs. We specialize in custom-tailored Ankara gowns, elegant children's wear, and premium hotel-grade artisan bedding crafted with technical precision and style." />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://khatiex-designs.vercel.app/" />
+    <meta property="og:url" content="https://khatiex.vercel.app/" />
     <meta property="og:title" content="Khatiex Designs | Masterful Tailoring" />
-    <meta property="og:description" content="Custom-tailored fashion and hotel-grade bedding. Experience precision in every stitch." />
-    <meta property="og:image" content="https://khatiex-designs.vercel.app/og-image.png" />
+    <meta property="og:description" content="Custom-tailored fashion and hotel-grade bedding. Experience precision in every stitch from Khatiex Designs." />
+    <meta property="og:image" content="https://khatiex.vercel.app/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Khatiex Designs" />
-    <meta name="twitter:description" content="Bespoke tailoring and artisan suites—precision in every stitch." />
-    <meta name="twitter:image" content="https://khatiex-designs.vercel.app/og-image.png" />
+    <meta name="twitter:image" content="https://khatiex.vercel.app/og-image.png" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
